# src/modules/users/users.controller.ts
@@ -1,9 +1,9 @@
-import { Body, Controller, Delete, Get, Injectable, Patch, Post, Request, UseGuards } from '@nestjs/common';
+import { Body, Controller, Delete, Get, Injectable, Patch, Request, UseGuards } from '@nestjs/common';
 import { ApiResponse, ApiTags } from '@nestjs/swagger';
 import { User } from '@prisma/client';
+import { LocalAuthGuard } from 'src/common/guards/local.guard';
 import { UserRequestDto, UserResponseDto } from './users.dto';
 import { UsersService } from './users.service';
-import { LocalAuthGuard } from 'src/common/guards/local.guard';
 
 @Injectable()
 @ApiTags('User')
@@ -24,6 +24,16 @@ export class UsersController {
   async deleteUser(@Request() request: { user_id: string }): Promise<void> {
     const { user_id } = request;
     return this.usersService.deleteUser(user_id);
+  }
+
+  @Patch('email')
+  @ApiResponse({ type: UserResponseDto })
+  async updateEmail(
+    @Request() request: { user_id: string },
+    @Body() { email }: UserRequestDto,
+  ): Promise<UserResponseDto> {
+    const { user_id } = request;
+    return this.usersService.updateEmail(user_id, email);
   }
 
   @Patch('username')
